# RecompCore

./: .gitattributes  .gitignore  CHASSIS.md  CMakeLists.txt  README.md  THIRD_PARTY.md  build.sh  run.sh  run_tests.sh
.github/workflows/: build.yml  ci.yml
Data/Sys/GameSettings/: 0000000100000002.ini
DolRecomp/: CMakeLists.txt  README.md
DolRecomp/.github/workflows/: cmake-single-platform.yml
DolRecomp/docs/: README.md
DolRecomp/src/: analysis.c  analysis.h  cli.c  cli.h  jobs.c  jobs.h  loader.c  loader.h  main.c  setup.c  setup.h  util.c  util.h
DolRecomp/src/backend/: emitter.c  emitter.h  emitter_branch.c  emitter_float.c  emitter_integer.c  emitter_private.h  emitter_system.c
DolRecomp/src/core/: cpu.c  cpu.h  types.h
DolRecomp/src/frontend/: decoder.c  decoder.h  decoder_float.c  dol.h  (+11 more)
DolRecomp/tests/: cross_check.s  test_codegen_emit.c  test_cross_check.c  test_opcodes.c  test_pc_reference.c
DolRuntime/: README.md
DolRuntime/src/: event_clock.c  gx_recomp.c  headless_backend.c  interrupts.c  savestate.c
GXRuntime/: CMakeLists.txt  README.md  THIRD_PARTY.md
GXRuntime/.github/workflows/: ci.yml
GXRuntime/backends/aurora/: aurora_audio.cpp  aurora_backend.cpp  aurora_backend_private.h  aurora_graphics.cpp  aurora_input.cpp
GXRuntime/docs/: abi-scope-license.md
GXRuntime/graphics/aurora/: UPSTREAM.md
GXRuntime/graphics/aurora/cmake/: aurora_gx.cmake
GXRuntime/graphics/aurora/include/aurora/: gfx.h
GXRuntime/graphics/aurora/lib/: system_info.cpp
GXRuntime/graphics/aurora/lib/dolphin/gx/: GXCpu2Efb.cpp  GXLighting.cpp
GXRuntime/graphics/aurora/lib/gfx/: efb_readback.hpp  gxcore_draw.cpp  gxcore_draw.hpp  pipeline_cache.cpp  texture.hpp
GXRuntime/graphics/aurora/lib/gx/: command_processor.cpp  gx.cpp  gx.hpp  pipeline.cpp  pipeline.hpp  recomp.cpp  shader.cpp
GXRuntime/graphics/frontend/: ARCHITECTURE.md  CMakeLists.txt  README.md  UPSTREAM.md
GXRuntime/graphics/frontend/include/gxruntime/aurora_recomp/: dff2dolt.hpp  render_sink.hpp  replay.hpp  retail_gx_frontend.hpp  retail_gx_frontend_c.h  trace.hpp
GXRuntime/graphics/frontend/src/: dff2dolt.cpp  render_sink.cpp  replay.cpp  retail_gx_frontend.cpp  trace_io.cpp
GXRuntime/graphics/frontend/tests/: dff2dolt_test.cpp  frontend_replay_test.cpp  recomp_fifo_test.cpp  replay_digest_test.cpp  trace_io_test.cpp
GXRuntime/graphics/frontend/tools/: dff2dolt.cpp  dolgx_replay.cpp  dolgx_replay_core.cpp  dolgx_replay_pixels.cpp  dolgx_replay_pixels.hpp
GXRuntime/graphics/gxcore/: CMakeLists.txt
GXRuntime/graphics/gxcore/include/gxruntime/gxcore/: gxcore.hpp  shader.hpp  texture_decode.hpp
GXRuntime/graphics/gxcore/src/: gxcore.cpp  gxcore_shader.cpp  texture_decode.cpp
GXRuntime/graphics/gxcore/tests/: gxcore_texture_decode_test.cpp  gxcore_wgsl_test.cpp
GXRuntime/include/core/: cpu.h  types.h
GXRuntime/include/gxruntime/: aram.h  audio_dma.h  aurora_backend.h  boot.h  di.h  dvd.h  event_clock.h  exi.h  guest_memory.h  gx_recomp.h  headless_backend.h  hle.h  hle_abi.h  interrupts.h  loader.h  memory_card.h  mmio_bus.h  platform.h  savestate.h  si.h  vi_clock.h
GXRuntime/src/: aram.c  audio_dma.c  boot.c  di.c  dvd.c  event_clock.c  exi.c  guest_memory.c  gx_recomp.c  gx_recomp_internal.h  gx_recomp_parser.c  headless_backend.c  interrupts.c  loader.c  memory_card.c  mmio_bus.c  platform.c  savestate.c  si.c  vi_clock.c
GXRuntime/src/core/: cpu.c  cpu_interpreter.c  cpu_interpreter_float.c  cpu_interpreter_integer.c  cpu_interpreter_private.h  cpu_interpreter_table.c
GXRuntime/src/hle/: hle_abi.c  hle_card.c  hle_core.c  hle_dvd.c  hle_input.c
GXRuntime/tests/: runtime_tests.c
Source/Core/: DolphinLib.ARM64.props  DolphinLib.props  DolphinLib.x64.props
StrikersRecomp/: .gitignore  CMakeLists.txt  README.md  bootstrap.sh
StrikersRecomp/.github/workflows/: lint.yml
StrikersRecomp/chassis-module/: module_export.c
StrikersRecomp/docs/: architecture.md  reproducing.md
StrikersRecomp/patches/: README.md
StrikersRecomp/runtime/host/: audio.c  hle.c  hle_abi.h  hle_card.c  hle_card.h  hle_dvd.c  hle_dvd.h  hle_input.c  hle_input.h  hle_offsets.h  hle_physics.c  hle_physics.h  interrupt.c  main.c  mmio.c  mmio.h  sdk_map.c
StrikersRecomp/tools/: demand_certificate.py  fix_generated.py  generate.py  package_module.sh  state_diff.py  symbols.py
chassis-module/: CMakeLists.txt
docs/: architecture.md
include/core/: cpu.h  types.h
include/dolruntime/: mmio_bus.h
module-template/: CMakeLists.txt  README.md  gen_module_tables.py  module_export.c
module-template/DolRuntime/backends/aurora/: aurora_backend.cpp
module-template/DolRuntime/docs/: abi-scope-license.md
module-template/DolRuntime/graphics/aurora/include/aurora/: gfx.h
module-template/DolRuntime/graphics/aurora/lib/gfx/: common.cpp  gxcore_draw.cpp
module-template/DolRuntime/graphics/aurora/lib/gx/: recomp.hpp
module-template/DolRuntime/graphics/aurora/tests/: gx_test_stubs.cpp
module-template/DolRuntime/graphics/frontend/tests/: replay_digest_test.cpp
module-template/DolRuntime/graphics/frontend/tools/: dff2dolt.cpp  pixel_diff.py
module-template/DolRuntime/graphics/gxcore/include/dolruntime/gxcore/: shader.hpp  texture_decode.hpp
module-template/DolRuntime/graphics/gxcore/src/: texture_decode.cpp
module-template/DolRuntime/include/core/: cpu.h
module-template/DolRuntime/src/: exi.c  guest_memory.c  loader.c
module-template/DolRuntime/src/core/: cpu.c
patches/: README.md
runtime/host/: audio.h  hle.h  interrupt.c  interrupt.h  main.c  mmio.c  mmio.h  sdk_map.h
src/: aram.c  audio_dma.c  mmio_bus.c  si.c
src/backend/: README.md
src/core/: README.md  cpu.c  cpu.h  types.h
src/frontend/: dol.h
tests/: opcode_samples.h  test_codegen_emit.c  test_rel.c
tests/corpus/: inventory.c
tests/diff/: probe.h  probes.inc  run.c
tests/oracle/: dedicated_diff  generate_host_fixture.py  generated_cases.inc  host_diff  host_diff_gen.c  host_diff_run.c  host_generated.c  oracle.map  real_dol_coverage.json  verify_capture.py
tools/: certificate_G4QE01.json  state_diff.py
(+421 files in other folders)
